# minidump-viewer

./: .gitignore  Makefile  README.md
.github/workflows/: release.yml
frontend/: README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
frontend/src/: app.css
frontend/src/components/: Exception.svelte  MemoryList.svelte  ModuleList.svelte  RegisterContext.svelte  SystemInfo.svelte  ThreadList.svelte
frontend/src/lib/: index.ts  types.ts  utils.ts
frontend/src/lib/components/: CollapsibleSection.svelte  DebugSection.svelte  Exception.svelte  ExpandableArray.svelte  FieldDisplay.svelte  MemoryList.svelte  ModuleList.svelte  RegisterContext.svelte  RegisterSection.svelte  SystemInfo.svelte  ThreadItem.svelte  ThreadList.svelte
frontend/src/routes/: +layout.js  +page.svelte  MemoryList.svelte  RegisterContext.svelte  SystemInfo.svelte  ThreadList.svelte
viewer-wasm/: Cargo.toml
viewer-wasm/src/: common.rs  context.rs  debug.rs  errors.rs  exception.rs  lib.rs  memory.rs  modules.rs  system_info.rs  threads.rs
