[package]
name = "viewer-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
minidump = "0.26.0"
minidump-unwind = { version = "0.26.0", default-features = false, features = [
  "debuginfo-unwind",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
symbolic = { version = "12.16.2", default-features = false, features = [
  "debuginfo",
  "symcache",
] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
